Fixes #220 Last editor icon misaligned in iPad.

--- a/src/styles/components/_dialog.sass
+++ b/src/styles/components/_dialog.sass
@@ -39,6 +39,7 @@
 				cursor: hand
 
 		.dialog-comments
+			clear: both
 			padding: 8px 16px 16px 16px
 			max-height: 18vh
 
